--- a/Memory-main/Memory-main/index.html
+++ b/Memory-main/Memory-main/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./index.js" type="text/javascript">  </script>
+    <script src="./index.js" type="text/javascript"></script>
     <link rel="stylesheet" href="index.css">
     <title>MEMORY</title>
 </head>
 
 <body>
     <header>
-        <h1>MEMORY</h1>
+        <h1>MEMORY - MAIN </h1>
     </header>
-    <button onclick="ompleCaixa(16,girada,img)">START</button>
+    <button onclick="ompleCaixa(16,girada,img)">EMPEZAR</button>
     <div id="scoreContainer">
       <div id="score">0</div>
     </div>
